# DLAI-project-2026

./: .gitignore  README.md  pyproject.toml
configs/: baseline.yaml  e1_A_sameinit_samedata.yaml  e1_B_sameinit_splitdata.yaml  e1_D_diffinit_splitdata.yaml  e2_soup.yaml  e3_align.yaml  e5_align_1k.yaml  e5_align_2k.yaml  e5_align_5k.yaml  e5_frac1k.yaml  e5_frac2k.yaml  e5_frac5k.yaml
notebooks/: dlai-merging-extended.ipynb
report/: main.tex  references.bib
results/checkpoints/: baseline_seed0.pt  e1B_pair0_m1.pt  e1B_pair0_m2.pt  e1B_pair1_m1.pt  e1B_pair1_m2.pt  e1D_pair0_m1.pt  e1D_pair0_m2.pt  e1D_pair1_m1.pt  e1D_pair1_m2.pt  e2_model0.pt  e2_model1.pt  e2_model2.pt  e2_model3.pt  e2_model4.pt  e3_E1D_pair0_merged_repaired.pt  e3_E2_model0x1_m2_aligned.pt  e3_E2_model0x1_merged_repaired.pt  e3_E2_model0x2_m2_aligned.pt  e3_E2_model0x2_merged_repaired.pt  e3_E2_model1x3_m2_aligned.pt  e3_E2_model1x3_merged_repaired.pt  e3_E2_model3x4_m2_aligned.pt  e3_E2_model3x4_merged_repaired.pt  smoke_seed0.pt
results/tables/: baseline_seed0.csv  e1B_pair0_m1.csv  e1B_pair0_m2.csv  e1B_pair1_m1.csv  e1B_pair1_m2.csv  e1D_pair0_m1.csv  e1D_pair0_m2.csv  e1D_pair1_m1.csv  e1D_pair1_m2.csv  e1_A.csv  e1_B.csv  e1_D.csv  e1_barriers_summary.csv  e2_greedy_steps.csv  e2_individuals.csv  e2_lmc_barriers.csv  e2_lmc_check.csv  e2_merging.csv  e2_model0.csv  e2_model1.csv  e2_model2.csv  e2_model3.csv  e2_model4.csv  e2_summary.csv  e2_task_vector_norms.csv  e2_ties_sweep.csv  e3_barriers.csv  e3_curves.csv  e3_pipeline_summary.csv  e3_repair.csv  e4_cosine.csv  e5_summary.csv  (+4 more)
(+60 files in other folders)
