[project]
name = "dlai-model-merging"
version = "0.1.0"
description = "Model merging in low-resource regimes — DLAI 2025/26 exam project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scipy>=1.13.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
